# metric_videos

./: .gitignore  Cargo.toml  README.md  compileJSX.bat  package-lock.json  package.json
data/log/: .gitignore
data/static/: dashboard.js  main.css  startReact.js  video.js
jsx/: dashboard.js  startReact.js
src/: lib.rs  metrics.rs  settings.rs  updater.rs
src/resources/: api.rs  mod.rs  pages.rs
