[package]
name = "metric_videos"
version = "0.1.0"
authors = ["Anthony Heathcoat <tony@aehdev.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-http = "1.0.1"
actix-files = "0.2.1"
chrono = "0.4.11"
config = "0.10.1"
clap = "2.33.0"
lazy_static = "1.4.0"
log = "0.4.8"
log4rs = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"